404 page not auth redirects

--- a/src/components/auth/custom.css
+++ b/src/components/auth/custom.css
@@ -8,3 +8,21 @@
 .top {
 	padding-top: 15px;
 }
+
+.flexed {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding-top: 50px;
+}
+
+.return {
+	border: solid black 1px;
+	padding: .3%;
+	margin: 10px 0;
+	border-radius: 4px;
+}
+.return:hover {
+	background-color: #c5c3c3;
+}
